--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 }
 header
 {background-image: url(../1.jpg);
-height: 100vh;
+height: 150vh;
 background-size: cover;
-background-position:center;
+background-position:center left;
 }
 ul{
 	float: right;
