--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,10 @@ ul li{
 }
 ul li a{
 	text-decoration: none;
-	color: #00FFFF;
+	color: #FFFFFF;
 	padding: 5px 20px ;
-	border: 2px solid #fff;
+	border: 4px solid #fff;
+	background-color: #000;
 transition: 0.6s ease;}
 ul li a:hover{
 	background-color: #fff;
