--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 header
 {background-image: url(../1.jpg);
 height: 150vh;
-background-size: cover;
+background size: cover;
 background-position:center;
 }
 ul{
