--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ header
 {background-image: url(../1.jpg);
 height: 150vh;
 background-size: cover;
-background-position:center;
+background-position:center right;
 }
 ul{
 	float: right;
